force-app/main/default/objects/Conversion_Details__c/Conversion_Details__c.object-meta.xml
<CustomObject>
    <label>Conversion Details</label>
    <nameField>
        <displayFormat>CD-{0000000}</displayFormat>
        <label>Conversion Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conversion Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>