force-app/main/default/objects/Conversion_Details__c/fields/ARN_Code__c.field-meta.xml
<CustomField>
    <fullName>ARN_Code__c</fullName>
    <label>ARN Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>