force-app/main/default/objects/Conversion_Details__c/fields/Conversion_Amount__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Amount__c</fullName>
    <label>Conversion Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>