force-app/main/default/objects/Conversion_Details__c/fields/Converted_Flag__c.field-meta.xml
<CustomField>
    <fullName>Converted_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Converted Flag</label>
    <type>Checkbox</type>
</CustomField>