force-app/main/default/objects/Conversion_Details__c/fields/Folio_Number__c.field-meta.xml
<CustomField>
    <fullName>Folio_Number__c</fullName>
    <label>Folio Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>