force-app/main/default/objects/Conversion_Details__c/fields/Investment_date__c.field-meta.xml
<CustomField>
    <fullName>Investment_date__c</fullName>
    <label>Investment date</label>
    <type>Date</type>
</CustomField>