force-app/main/default/objects/Conversion_Details__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Conversion Details</relationshipLabel>
    <relationshipName>Conversion_Details</relationshipName>
    <type>Lookup</type>
</CustomField>