force-app/main/default/objects/Conversion_Details__c/fields/LOB__c.field-meta.xml
<CustomField>
    <fullName>LOB__c</fullName>
    <label>LOB</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MF</fullName>
            </value>
            <value>
                <fullName>AIF</fullName>
            </value>
            <value>
                <fullName>PMS</fullName>
            </value>
            <value>
                <fullName>RE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>