force-app/main/default/objects/Conversion_Details__c/fields/Scheme_Name__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Name__c</fullName>
    <label>Scheme Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>