force-app/main/default/objects/Conversion_Details__c/fields/SIP_Frequency__c.field-meta.xml
<CustomField>
    <fullName>SIP_Frequency__c</fullName>
    <label>SIP Frequency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>