force-app/main/default/objects/Conversion_Details__c/fields/SIP_From_Date__c.field-meta.xml
<CustomField>
    <fullName>SIP_From_Date__c</fullName>
    <label>SIP From Date</label>
    <type>Date</type>
</CustomField>