force-app/main/default/objects/Conversion_Details__c/fields/SIP_or_Lumpsum_flag__c.field-meta.xml
<CustomField>
    <fullName>SIP_or_Lumpsum_flag__c</fullName>
    <label>SIP or Lumpsum flag</label>
    <length>50</length>
    <type>Text</type>
</CustomField>