force-app/main/default/objects/Conversion_Details__c/fields/SIP_To_Date__c.field-meta.xml
<CustomField>
    <fullName>SIP_To_Date__c</fullName>
    <label>SIP To Date</label>
    <type>Date</type>
</CustomField>